Revision history for Perl extension Moose::Autobox

0.08 Mon. May 12, 2008
    - add flatten method to Array and Hash
    - upped the dependency on autobox from 1.22 to 2.23
      at the suggestion of chocolateboy
    - might as well up the Moose dependency too.

0.07 Mon. April 28, 2008
    ~~ no more Module::Build, thanks mst ~~

    * Moose::Autobox
      - added documentation about how to extend the autoboxed
        types (RT #34315)
    
    * Moose::Autobox::Hash
      Moose::Autobox::Indexed
      - added support for slice and hslice (jrockway)
        - added tests for this

0.06 Tues. Jan. 22, 2008
    ~~ updated copyright dates & some docs ~~   

    * Moose::Autobox
      - fixed role application code to follow the new
        Moose::Util based API
        
    - upped the Moose version dependency
    - upped the autobox version dependency 

0.05 Sun. Aug. 5, 2007
    * Moose::Autobox
      - fixed loading approach so that Moose::Object doesn't end 
        up in isa (thanks to mst)

0.04 Thurs. May 31, 2007
    * Moose::Autobox::Hash
      - added method for shallow hash merging

    * Moose::Autobox::String
      - fixed rindex method

    * Moose::Autobox::Item
      - moved &dump from ::Ref to ::Item, so that it can be used
        for the other types too

      - added &perl method which is an alias for &dump for symmetry
        with Perl6's .perl

    * Moose::Autobox::Scalar/Array/Hash
      - added &print/&say to SCALAR, ARRAY and HASH

0.03 Thurs. Aug 17, 2006

    * Moose::Autobox 
      - we now inherit from autobox, now we don't have to 
        do that ugly eval thing or manually load autobox  
        when we want to use this module.
      - added &mixin_additional_role to allow mixing in of 
        additional functionality (see examples/unit/*)

    * Moose::Autobox::Code
      - added the Y and U combinators

    + added new examples for units
      - ported from the Pugs examples/units directory

0.02 Sat. June 24, 2006